# c-data-structures

./: .gitignore
list/: CMakeLists.txt
list/include/: errors.h  list.h
list/source/: list.c  main.c  node.c
queue/: CMakeLists.txt
queue/include/: node.h  queue.h
queue/source/: node.c  queue.c  test.c
stack/: CMakeLists.txt
stack/include/: errors.h  node.h  stack.h
stack/source/: main.c  node.c  stack.c
tree/: CMakeLists.txt  main.c
tree/buildd/: CMakeCache.txt  Makefile  cmake_install.cmake  test
tree/buildd/queue/: Makefile  cmake_install.cmake
tree/buildd/tree/: Makefile  cmake_install.cmake
tree/queue/: CMakeLists.txt
tree/queue/include/: qnode.h  queue.h
tree/queue/source/: node.c  queue.c
tree/tree/: CMakeLists.txt
tree/tree/include/: node.h  tree.h
tree/tree/source/: node.c  tree.c
